adding for checking the branch

--- a/get_ticker_data.ipynb
+++ b/get_ticker_data.ipynb
@@ -6,7 +6,9 @@
    "id": "516d4981",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "#adding for checking the branch"
+   ]
   },
   {
    "cell_type": "code",
