integrated serp api

--- a/ticker_investigation_proj.ipynb
+++ b/ticker_investigation_proj.ipynb
@@ -46,26 +46,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 94,
    "id": "eb71e9aa",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Correct way to read the Gemini API key from a file\n",
-    "with open(r\"C:\\Users\\Rohit Jonnadula\\secret_key.txt.txt\", \"r\") as file:\n",
-    "    GEMINI_API_KEY = file.read().strip()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "c2ae5eb4",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Correct way to read the Gemini API key from a file\n",
-    "with open(r\"C:\\Users\\Rohit Jonnadula\\secret_key.txt.txt\", \"r\") as file:\n",
-    "    GEMINI_API_KEY = file.read().strip()"
+    "import json\n",
+    "with open(r\"C:\\Users\\Rohit Jonnadula\\secret_key.txt\", \"r\") as file:\n",
+    "    json_str = json.load(file)\n",
+    "    GEMINI_API_KEY = json_str.get(\"gemini\")\n",
+    "    serpapi = json_str.get(\"serpapi\")\n"
    ]
   },
   {
@@ -173,6 +164,110 @@
     "print(\"-\" * 40)\n",
     "print(f\"The final link assigned to the variable 'my_final_url' is:\")\n",
     "print(f\"\\n>>>> {my_final_url} <<<<\\n\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "id": "696f7241",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "urls=[]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 109,
+   "id": "e2ce39a8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Try 1: Searching 'site:tickertape.in \"bandhan bank\" stock'\n",
+      "  Checking: https://www.tickertape.in/stocks/bandhan-bank-BANH\n",
+      "✅ FOUND: https://www.tickertape.in/stocks/bandhan-bank-BANH\n",
+      "Final URL: https://www.tickertape.in/stocks/bandhan-bank-BANH\n",
+      "  Checking: https://www.tickertape.in/stocks/bandhan-bank-BANH\n",
+      "✅ FOUND: https://www.tickertape.in/stocks/bandhan-bank-BANH\n",
+      "Final URL: https://www.tickertape.in/stocks/bandhan-bank-BANH\n"
+     ]
+    }
+   ],
+   "source": [
+    "import requests\n",
+    "from typing import Optional\n",
+    "\n",
+    "def get_tickertape_url(ticker_symbol: str, serpapi_key: str) -> Optional[str]:\n",
+    "    \"\"\"\n",
+    "    Get exact Tickertape.in URL for NSE ticker using SerpAPI\n",
+    "    \"\"\"\n",
+    "    # Multiple search strategies (broader → more reliable)\n",
+    "    search_queries = [\n",
+    "        f'site:tickertape.in \"{ticker_symbol}\" stock',  # Broadest\n",
+    "        f'site:tickertape.in/stocks/ {ticker_symbol}',  # Stocks section\n",
+    "        f'{ticker_symbol} site:tickertape.in',          # Ticker first\n",
+    "        f'{ticker_symbol} NSE tickertape',              # Natural search\n",
+    "    ]\n",
+    "    \n",
+    "    params_base = {\n",
+    "        \"engine\": \"google\",\n",
+    "        \"api_key\": serpapi_key,\n",
+    "        \"num\": 10\n",
+    "    }\n",
+    "    \n",
+    "    for i, query in enumerate(search_queries, 1):\n",
+    "        print(f\"Try {i}: Searching '{query}'\")\n",
+    "        params = params_base.copy()\n",
+    "        params[\"q\"] = query\n",
+    "        \n",
+    "        try:\n",
+    "            response = requests.get(\"https://serpapi.com/search\", params=params)\n",
+    "            results = response.json()\n",
+    "            \n",
+    "            for result in results.get(\"organic_results\", []):\n",
+    "                url = result.get(\"link\", \"\")\n",
+    "                print(f\"  Checking: {url}\")\n",
+    "                \n",
+    "                # Tickertape stock URL patterns\n",
+    "                if (\"tickertape.in\" in url and \n",
+    "                    \"/stocks/\" in url and \n",
+    "                    (ticker_symbol.lower() in url.lower() or \n",
+    "                     ticker_symbol.upper() in result.get(\"title\", \"\").upper())):\n",
+    "                    print(f\"✅ FOUND: {url}\")\n",
+    "                    return url\n",
+    "                    \n",
+    "        except Exception as e:\n",
+    "            print(f\"  Error: {e}\")\n",
+    "    \n",
+    "    print(\"❌ No Tickertape URL found in any search\")\n",
+    "    return None\n",
+    "\n",
+    "# Test\n",
+    "serpapi_key = serpapi\n",
+    "url = get_tickertape_url(\"bandhan bank\", serpapi_key)\n",
+    "urls.append(url)\n",
+    "print(f\"Final URL: {url}\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 110,
+   "id": "53233947",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['https://www.tickertape.in/stocks/pricol-PRCO', 'https://www.tickertape.in/stocks/mps-MPSL', 'https://www.tickertape.in/stocks/mps-MPSL', 'https://www.tickertape.in/stocks/billionbrains-garage-ventures-GROWO', None, 'https://www.tickertape.in/stocks/sanghvi-movers-SNGM', 'https://www.tickertape.in/stocks/bandhan-bank-BANH']\n"
+     ]
+    }
+   ],
+   "source": [
+    "print (urls)"
    ]
   },
   {
